z-index fix

--- a/assets/src/scss/layout/_get-requisites.scss
+++ b/assets/src/scss/layout/_get-requisites.scss
@@ -3,6 +3,8 @@
   background-color: $primary-color;
   position: relative;
   &-offer {
+    position: relative;
+    z-index: 2;
     .title-section {
       margin-bottom: 15px;
     }
